Tue May 20 17:55:39 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Svc_Handler.h:

          Added an enum to be used as flags parameter for close().

        * ace/Acceptor.cpp:
        * ace/Connector.cpp:
        * ace/Strategies_T.cpp:

          Use the new enum during the call to close() on the service handler
          to indicate the circumstances behind the closure.

          This is part of a set of commits for Bug 2935.

Tue May 20 09:45:21 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Ping_Socket.{h,cpp}:
          Use bool

Mon May 19 19:26:21 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Log_Msg_Test.cpp:
          On VxWorks/LynxOS we didn't test the buffer overflow, but we
          shouldn't test this when ACE_LACKS_VSNPRINTF is defined
          because it will then fail

Mon May 19 19:13:21 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Hash_Map_Manager_T.h:
          Doxygen change

        * ace/Hash_Map_Manager_T.cpp (shared_find)
          Set errno to ENOENT when the size is zero

Mon May 19 19:08:21 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added 2085 and 2243

Mon May 19 14:19:21 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Updated mailing lists

        * docs/Download.html:
        * etc/index.html:
          Updated for x.6.5

        * ace/config-openvms.h:
          Removed sock max of 64kb

Mon May 19 02:53:21 CDT 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 5.6.5 released.

Fri May 16 10:13:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted change below, causes problems in the builds
        * include/makeinclude/platform_linux.GNU:
          Only set DLD and LD when they are not set yet

Fri May 16 07:50:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Based_Pointer_Test.cpp: